fixed wrapping text issue

--- a/app/assets/stylesheets/z_defaults.scss
+++ b/app/assets/stylesheets/z_defaults.scss
@@ -23,6 +23,7 @@ table.table {
   position: relative;
   
   & .slider-title {
+    white-space: nowrap;
     position: absolute;
     bottom: 0;
     left: 50%;
